@@ -507,6 +507,7 @@ verilog/parser_bugs.v:487: ENDTASKFUNC  'endfunction'
 verilog/parser_bugs.v:489: COMMENT  '// .f() in function call'
 verilog/parser_bugs.v:490: MODULE  'module' 'fbug' undef '0'
 verilog/parser_bugs.v:496: ENDMODULE  'endmodule'
+verilog/parser_bugs.v:498: VAR  'parameter' 'bug671' 'netlist' '' '' '' '5:10:20'
 verilog/pinorder.v:001: COMMENT  '// DESCRIPTION: Verilog-Perl: Example Verilog for testing package'
 verilog/pinorder.v:002: COMMENT  '//'
 verilog/pinorder.v:003: COMMENT  '// This file ONLY is placed into the Public Domain, for any use,'
