@@ -7,6 +7,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ****	Fix function/task named parameter calls with empty parenthesis.
 
+****	Fix parameter assignment to mintypmax_expressions, bug671. [Arnaud Turier]
+
 
 * Verilog::Language 3.401 2013-05-21
 
